--- a/Content.StyleSheetify.Shared/Content.StyleSheetify.Shared.csproj
+++ b/Content.StyleSheetify.Shared/Content.StyleSheetify.Shared.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>StyleSheetify.Shared</RootNamespace>
+        <RootNamespace>Content.StyleSheetify.Shared</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
