--- a/Content.StyleSheetify.Client/Content.StyleSheetify.Client.csproj
+++ b/Content.StyleSheetify.Client/Content.StyleSheetify.Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Content.StyleSheetify.Client</RootNamespace>
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\RobustToolbox\Robust.Client\Robust.Client.csproj" />
+      <ProjectReference Include="..\..\RobustToolbox\Robust.Shared.Maths\Robust.Shared.Maths.csproj" />
       <ProjectReference Include="..\..\RobustToolbox\Robust.Shared\Robust.Shared.csproj" />
       <ProjectReference Include="..\Content.StyleSheetify.Shared\Content.StyleSheetify.Shared.csproj" />
     </ItemGroup>
