--- a/Content.StyleSheetify.Shared/Content.StyleSheetify.Shared.csproj
+++ b/Content.StyleSheetify.Shared/Content.StyleSheetify.Shared.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Content.StyleSheetify.Shared</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\RobustToolbox\Robust.Shared.Maths\Robust.Shared.Maths.csproj" />
       <ProjectReference Include="..\..\RobustToolbox\Robust.Shared\Robust.Shared.csproj" />
     </ItemGroup>
 
