--- a/Content.StyleSheetify.Client/Content.StyleSheetify.Client.csproj
+++ b/Content.StyleSheetify.Client/Content.StyleSheetify.Client.csproj
@@ -12,6 +12,8 @@
       <ProjectReference Include="..\..\RobustToolbox\Robust.Shared.Maths\Robust.Shared.Maths.csproj" />
       <ProjectReference Include="..\..\RobustToolbox\Robust.Shared\Robust.Shared.csproj" />
       <ProjectReference Include="..\Content.StyleSheetify.Shared\Content.StyleSheetify.Shared.csproj" />
+
+      <ProjectReference Include="..\..\RobustToolbox\Robust.Serialization.Generator\Robust.Serialization.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
 </Project>
